--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,9 +7,12 @@ galaxy_info:
   min_ansible_version: 2
 
   platforms:
-   - name: Fedora
-     versions:
-     - all
+  - name: EL
+    versions:
+    - all
+  - name: Debian
+    versions:
+    - all
 
   galaxy_tags:
      - gitlab
