5° coffee && update base-redhat.yml

--- a/tasks/base-redhat.yml
+++ b/tasks/base-redhat.yml
@@ -12,7 +12,7 @@
 
 - name: Baixando script de repositorios do Gitlab 
   get_url:
-          url: https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.rpm.sh
+          url: http://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.rpm.sh
           dest: /tmp/script.rpm.sh
 
 - name: Executando script de repositorio
