--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ services:
  - docker
 
 env:
+ - global: ANSIBLE_HOST_KEY_CHECKING="False"
  - distribution: centos
    version: 7
 # - distribution: fedora
@@ -28,10 +29,10 @@ env:
    version: stretch
  - distribution: debian
    version: jessie
-
-env:
-  global:
-    - ANSIBLE_HOST_KEY_CHECKING="False"
+#
+#env:
+#  global:
+#    - ANSIBLE_HOST_KEY_CHECKING="False"
 
 # Install ansible
 addons:
