--- a/tasks/base-Debian.yml
+++ b/tasks/base-Debian.yml
@@ -1,5 +1,10 @@
 ---
 # tasks file for iac-ansible-gitlab
+
+- name: Include Vars
+  include_vars: "{{ ansible_os_family }}.yml"
+
+
 - name: Instalar Dependencias
   apt: 
     name: "{{ item }}" 
@@ -13,11 +18,11 @@
 
 - name: Baixando script de repositorios do Gitlab 
   get_url:
-          url: "{{ gitlab_repository_installation_script_url }}"
-          dest: /tmp/gitlab_install_repository.sh
+    url: "{{ gitlab_repository_installation_script_url }}"
+    dest: /tmp/gitlab_install_repository.sh
 
 - name: Executando script de repositorio
-  command: bash /tmp/gitlab_install_repository.sh 
+  command: bash /tmp/script.deb.sh 
 
 - name: Instalando Gitlab CE
   apt: 
