--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for iac-ansible-gitlab
+# defaults file for gitlab
 gitlab_repository_installation_script_url: "https://packages.gitlab.com/install/repositories/gitlab/{{ gitlab_edition }}/script.deb.sh"
 # General config.
 gitlab_external_url: "https://gitlab.example.com"
