--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,11 +1,11 @@
 galaxy_info:
-  role_name: iac-ansible-gitlab
+  role_name: gitlab
   author: w.luis.araujo
-  description: Install Gitlab CE
+  description: "Infrastructure as Code (IaC) with Ansible role for Install Gitlab CE"
   company: LUSAR | wluisaraujo.github.io
-  license: license (GPLv3)
+  license: "license (GPLv3)"
 
-  min_ansible_version: 2.0
+  min_ansible_version: 2.4
 
   platforms:
   - name: EL
