--- a/.travis.yml
+++ b/.travis.yml
@@ -22,24 +22,18 @@ env:
      
  - distribution: centos
    version: 7
-# - distribution: fedora
-#   version: 26
-# - distribution: fedora
-#   version: 25
-# - distribution: fedora
-#   version: 24
+ - distribution: fedora
+   version: 30
+ - distribution: fedora
+   version: 29  
  - distribution: ubuntu
-   version: xenial
-# - distribution: ubuntu
-#   version: trusty
+   version: bionic
+ - distribution: ubuntu
+   version: xenial  
+ - distribution: debian
+   version: buster
  - distribution: debian
    version: stretch
- - distribution: debian
-   version: jessie
-#
-#env:
-#  global:
-#    - ANSIBLE_HOST_KEY_CHECKING="False"
 
 # Install ansible
 addons:
@@ -64,8 +58,7 @@ install:
 script:
  # Basic role syntax check
  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
- - ansible-playbook -i tests/inventory tests/test.yml --connection=local --sudo --check
-
+ - ansible-playbook -i tests/inventory tests/test.yml --connection=local --check
 
 notifications:
  webhooks: https://galaxy.ansible.com/api/v1/notifications/
