--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,9 +11,17 @@ galaxy_info:
   - name: EL
     versions:
     - 7
+  - name: Fedora
+    versions:
+    - 30
+    - 29	
   - name: Debian
     versions:
     - all
+  - name: Ubuntu
+    versions:
+    - bionic
+    - xenial
 
   galaxy_tags:
      - gitlab
